- add ZMSettings::append(..) which should be useful to set custom fields
  without overriding others
- renamed ZMBanners::getBannerForName to getBannersForGroupName
- make ZMBanners return no results if no identifiers are set for a group
- add transaction support to ZMDatabase (not used, yet)
- moved creole code into plugin (it's bloating the relase and not 100% ready
  yet)

Release 0.9.1
- zm_custom_validate_password in zm_master_password does not return a reference!
- fix invalid/short PHP tags
- always enable HTML echo'ing in admin
- make fields for zm_quick_edit plugin configurable; this also includes
  support for custom fields via generic get/set methods
- add categoryId parameter to zm_product_href; this requires changes to a few
  templates that use the echo parameter
- add categoryId parameter to zm_product_image_link(..); together with the
  previous change this allows to preserve the categoryId for category listings
- add group pricing service, fix spelling mistake: _newPriceGgroup() rather
  than _newPriceGoup()
- disable caching of ajax requests (otherwise cart contents, etc would be
  cached...)
- remove code that added form parameter to the form action (this was done to
  get around some bits of zen-cart code that were looking at $_GET and $_POST
	at the same time...)
- add function zm_ui2date()
- add ZMService::map2obj(..)
- change the i18n file patch to make theme date settings work in admin
- make plugin scope more efficient
- changed loading of static code which stops static variables from being
  globals
- start implementing singletons to replace all zm_ globals
- streamline init process (in particular when not using core.php)
- removed obsolete ZMDao class
- removed all $zm_loader references; there is a new setting 'isLegacyAPI' that
  may be set to true to keep creating zm_xxxxx globals
- get rid of ZMService::getDB()
- mark ZMService deprecated; use ZMDbUtils methods instead
- moved zm_log and zm_backtrace into ZMObject