@@ -96,6 +96,7 @@ Release 0.9.2
 - add transaction support to ZMDatabase (not used, yet)
 - moved creole code into plugin (it's bloating the relase and not 100% ready
   yet)
+- modify ZMDatabase to allow to return raw SQL data from query() and update()
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
